[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/player/Player_Ship.png" type="Texture" id=1]
[ext_resource path="res://assets/player/Turret.png" type="Texture" id=2]
[ext_resource path="res://game_elements/player/Player.gd" type="Script" id=3]

[node name="Player" type="KinematicBody2D"]
scale = Vector2( 0.4, 0.4 )
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="PlayerSprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="PlayerHitBox" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 8, -72, 12, -51, 24, -48, 24, -32, 40, -32, 54, -10, 55, -16, 64, -16, 64, 0, 80, 16, 90, 69, 64, 48, 64, 80, 40, 56, 16, 56, 10, 61, 10, 67, -9, 67, -9, 61, -12, 57, -16, 56, -40, 56, -65, 82, -64, 48, -90, 70, -80, 16, -64, 0, -64, -13, -61, -16, -53, -16, -35, -30, -26, -32, -25, -47, -12, -51, -8, -72 )

[node name="BulletsSpawn" type="Position2D" parent="."]
position = Vector2( 0, -30 )

[node name="PlayerTurretSprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="ReloadTimer" type="Timer" parent="."]
wait_time = 3.0
